# ShimonController

./: CMakeLists.txt  main.cpp  oscTest.py  udp_server.py
Config/: ArmBoundaries.yaml  HeadMotorConfig.yaml  NotePositionTable.yaml
Include/: Def.h  ErrorDef.h  Logger.h  Scheduler.h  StatusDef.h  TypeDef.h  Util.h
Shimon/: CMakeLists.txt
Shimon/Include/: CircularQueue.h  CommandManager.h  OscListener.h  OscTransmitter.h  SerialDevice.h  Shimon.h  UdpSender.h
Shimon/Src/: Shimon.cpp
Shimon/Src/ArmController/: CMakeLists.txt
Shimon/Src/ArmController/Include/: Arm.h  ArmCommands.h  ArmController.h  IAIController.h  Modbus.h  OscTransmitter.h  SliderModel.h  StrikerController.h  StrikerHandler.h  StrikerTransmitter.h  Trajectory.h
Shimon/Src/ArmController/Src/: ArmController.cpp
Shimon/Src/HeadController/: CMakeLists.txt
Shimon/Src/HeadController/Include/: Config.h  CopleyASCIIController.h  DofLimits.h  DxlController.h  DxlMotor.h  HDMotor.h  HeadCommands.h  HeadController.h  Motor.h  MotorController.h
Shimon/Src/HeadController/Include/Gestures/: BreatheGesture.h  Gesture.h  HeadBangGesture.h
Shimon/Src/HeadController/Src/: HeadController.cpp
Strikers/: Strikers.ino  serial_test.py
Strikers/src/: def.h  logger.cpp  striker.h  strikerController.h
Strikers/src/epos4/: epos4.cpp  epos4.h  epos4_def.h
